SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/Sample_Master_Matrix_Data__c.object-meta.xml
<CustomObject>
    <label>Sample Master Matrix Data</label>
    <nameField>
        <label>Sample Master Matrix Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Master Matrix Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>