SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Master_Matrix_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>