SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>