SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/PKR_Attribute__c.field-meta.xml
<CustomField>
    <fullName>PKR_Attribute__c</fullName>
    <description>Maintain the PKR attribute of the product</description>
    <label>PKR Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promote</fullName>
            </value>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>No Sampling</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Sub-Scale</fullName>
            </value>
            <value>
                <fullName>Tolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>