SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Plant_ID__c.field-meta.xml
<CustomField>
    <fullName>Plant_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plant ID</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Sample Master Matrix Data</relationshipLabel>
    <relationshipName>Sample_Master_Matrix_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>