SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Master Matrix Data</relationshipLabel>
    <relationshipName>Sample_Master_Matrix_Data</relationshipName>
    <type>Lookup</type>
</CustomField>