SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Product_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only Product Categories are allowed</inlineHelpText>
    <label>Product Category ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Category__c.Level__c</field>
            <operation>equals</operation>
            <value>3 - Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Sample Master Matrix Data</relationshipLabel>
    <relationshipName>Sample_Master_Matrix_Data</relationshipName>
    <type>Lookup</type>
</CustomField>