SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region field for region specific products</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>