SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Sampling_Status__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Status__c</fullName>
    <label>Sampling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - In Preparation</fullName>
            </value>
            <value>
                <fullName>02 - Active</fullName>
            </value>
            <value>
                <fullName>03 - Blocked</fullName>
            </value>
            <value>
                <fullName>04 - Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>