SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Search_Data__c.field-meta.xml
<CustomField>
    <fullName>Search_Data__c</fullName>
    <description>Text field to store the concatenated values of Plant Name, Product Name, Product Category Name, Approver Name, and Region, separated by a delimiter for search and filtering purposes.</description>
    <inlineHelpText>This field automatically combines key values (Plant, Product, Category, Approver, Region)</inlineHelpText>
    <label>Search Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>