SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>