SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Sample Master Matrix Data</relationshipLabel>
    <relationshipName>Sample_Master_Matrix_Data</relationshipName>
    <type>Lookup</type>
</CustomField>