SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Plant_ID__c</columns>
    <columns>Product_Category_ID__c</columns>
    <columns>Sampling_Status__c</columns>
    <columns>Min__c</columns>
    <columns>Max__c</columns>
    <columns>Unit__c</columns>
    <columns>Threshold__c</columns>
    <columns>Approver__c</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>