SynProdGITV1/force-app/main/default/objects/Sample_Master_Matrix_Data__c/listViews/Enorica_Sample_Warehouse_List.listView-meta.xml
<ListView>
    <fullName>Enorica_Sample_Warehouse_List</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Category_ID__c</columns>
    <columns>Sampling_Status__c</columns>
    <columns>Approver__c</columns>
    <columns>Plant_ID__c</columns>
    <columns>Min__c</columns>
    <columns>Max__c</columns>
    <columns>Threshold__c</columns>
    <columns>Unit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant_ID__c</field>
        <operation>equals</operation>
        <value>Enorica Sample Warehouse</value>
    </filters>
    <label>Enorica Sample Warehouse List</label>
</ListView>